test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/dict-required-default.widl
// https://heycam.github.io/webidl/#required-dictionary-member
// "A required dictionary member must not have a default value."
dictionary Dict {
  required long member = 0;
};
